// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MoviesReducer LOAD should add a single movie, if the movie does not exist 1`] = `
Object {
  "entities": Object {
    "278": Object {
      "adult": false,
      "backdrop_path": "/xBKGJQsAIeweesB79KC89FpBrVr.jpg",
      "genre_ids": Array [
        "18",
        "80",
      ],
      "id": "278",
      "original_language": "en",
      "original_title": "The Shawshank Redemption",
      "overview": "Framed in the 1940s for the double murder of his wife and her lover, upstanding banker Andy Dufresne begins a new life at the Shawshank prison, where he puts his accounting skills to work for an amoral warden. During his long stretch in prison, Dufresne comes to be admired by the other inmates -- including an older prisoner named Red -- for his integrity and unquenchable sense of hope.",
      "popularity": 6.741296,
      "poster_path": "/9O7gLzmreU0nGkIB6K3BsJbzvNv.jpg",
      "release_date": "1994-09-10",
      "title": "The Shawshank Redemption",
      "video": false,
      "vote_average": 8.32,
      "vote_count": 5238,
    },
  },
  "error": "",
  "ids": Array [
    "278",
  ],
  "loading": false,
  "movies": Array [],
  "selectedMovieId": null,
}
`;

exports[`MoviesReducer LOAD should return the existing state if the movie exists 1`] = `
Object {
  "entities": Object {
    "278": Object {
      "adult": false,
      "backdrop_path": "/xBKGJQsAIeweesB79KC89FpBrVr.jpg",
      "genre_ids": Array [
        "18",
        "80",
      ],
      "id": "278",
      "original_language": "en",
      "original_title": "The Shawshank Redemption",
      "overview": "Framed in the 1940s for the double murder of his wife and her lover, upstanding banker Andy Dufresne begins a new life at the Shawshank prison, where he puts his accounting skills to work for an amoral warden. During his long stretch in prison, Dufresne comes to be admired by the other inmates -- including an older prisoner named Red -- for his integrity and unquenchable sense of hope.",
      "popularity": 6.741296,
      "poster_path": "/9O7gLzmreU0nGkIB6K3BsJbzvNv.jpg",
      "release_date": "1994-09-10",
      "title": "The Shawshank Redemption",
      "video": false,
      "vote_average": 8.32,
      "vote_count": 5238,
    },
  },
  "ids": Array [
    "278",
  ],
  "selectedMovieId": null,
}
`;

exports[`MoviesReducer SEARCH_COMPLETE & LOAD_SUCCESS should add all movies in the payload when none exist 1`] = `
Object {
  "entities": Object {
    "222": Object {
      "adult": false,
      "backdrop_path": "/xBKGJQsAIeweesB79KC89FpBrVr.jpg",
      "genre_ids": Array [
        "18",
        "80",
      ],
      "id": "222",
      "original_language": "en",
      "original_title": "The Shawshank Redemption",
      "overview": "Framed in the 1940s for the double murder of his wife and her lover, upstanding banker Andy Dufresne begins a new life at the Shawshank prison, where he puts his accounting skills to work for an amoral warden. During his long stretch in prison, Dufresne comes to be admired by the other inmates -- including an older prisoner named Red -- for his integrity and unquenchable sense of hope.",
      "popularity": 6.741296,
      "poster_path": "/9O7gLzmreU0nGkIB6K3BsJbzvNv.jpg",
      "release_date": "1994-09-10",
      "title": "The Shawshank Redemption",
      "video": false,
      "vote_average": 8.32,
      "vote_count": 5238,
    },
    "278": Object {
      "adult": false,
      "backdrop_path": "/xBKGJQsAIeweesB79KC89FpBrVr.jpg",
      "genre_ids": Array [
        "18",
        "80",
      ],
      "id": "278",
      "original_language": "en",
      "original_title": "The Shawshank Redemption",
      "overview": "Framed in the 1940s for the double murder of his wife and her lover, upstanding banker Andy Dufresne begins a new life at the Shawshank prison, where he puts his accounting skills to work for an amoral warden. During his long stretch in prison, Dufresne comes to be admired by the other inmates -- including an older prisoner named Red -- for his integrity and unquenchable sense of hope.",
      "popularity": 6.741296,
      "poster_path": "/9O7gLzmreU0nGkIB6K3BsJbzvNv.jpg",
      "release_date": "1994-09-10",
      "title": "The Shawshank Redemption",
      "video": false,
      "vote_average": 8.32,
      "vote_count": 5238,
    },
  },
  "error": "",
  "ids": Array [
    "278",
    "222",
  ],
  "loading": false,
  "movies": Array [],
  "selectedMovieId": null,
}
`;

exports[`MoviesReducer SEARCH_COMPLETE & LOAD_SUCCESS should add all movies in the payload when none exist 2`] = `
Object {
  "entities": Object {
    "222": Object {
      "adult": false,
      "backdrop_path": "/xBKGJQsAIeweesB79KC89FpBrVr.jpg",
      "genre_ids": Array [
        "18",
        "80",
      ],
      "id": "222",
      "original_language": "en",
      "original_title": "The Shawshank Redemption",
      "overview": "Framed in the 1940s for the double murder of his wife and her lover, upstanding banker Andy Dufresne begins a new life at the Shawshank prison, where he puts his accounting skills to work for an amoral warden. During his long stretch in prison, Dufresne comes to be admired by the other inmates -- including an older prisoner named Red -- for his integrity and unquenchable sense of hope.",
      "popularity": 6.741296,
      "poster_path": "/9O7gLzmreU0nGkIB6K3BsJbzvNv.jpg",
      "release_date": "1994-09-10",
      "title": "The Shawshank Redemption",
      "video": false,
      "vote_average": 8.32,
      "vote_count": 5238,
    },
    "278": Object {
      "adult": false,
      "backdrop_path": "/xBKGJQsAIeweesB79KC89FpBrVr.jpg",
      "genre_ids": Array [
        "18",
        "80",
      ],
      "id": "278",
      "original_language": "en",
      "original_title": "The Shawshank Redemption",
      "overview": "Framed in the 1940s for the double murder of his wife and her lover, upstanding banker Andy Dufresne begins a new life at the Shawshank prison, where he puts his accounting skills to work for an amoral warden. During his long stretch in prison, Dufresne comes to be admired by the other inmates -- including an older prisoner named Red -- for his integrity and unquenchable sense of hope.",
      "popularity": 6.741296,
      "poster_path": "/9O7gLzmreU0nGkIB6K3BsJbzvNv.jpg",
      "release_date": "1994-09-10",
      "title": "The Shawshank Redemption",
      "video": false,
      "vote_average": 8.32,
      "vote_count": 5238,
    },
  },
  "error": "",
  "ids": Array [
    "278",
    "222",
  ],
  "loading": false,
  "movies": Array [],
  "selectedMovieId": null,
}
`;

exports[`MoviesReducer SEARCH_COMPLETE & LOAD_SUCCESS should add only new movies when movies already exist 1`] = `
Object {
  "entities": Object {
    "222": Object {
      "adult": false,
      "backdrop_path": "/xBKGJQsAIeweesB79KC89FpBrVr.jpg",
      "genre_ids": Array [
        "18",
        "80",
      ],
      "id": "222",
      "original_language": "en",
      "original_title": "The Shawshank Redemption",
      "overview": "Framed in the 1940s for the double murder of his wife and her lover, upstanding banker Andy Dufresne begins a new life at the Shawshank prison, where he puts his accounting skills to work for an amoral warden. During his long stretch in prison, Dufresne comes to be admired by the other inmates -- including an older prisoner named Red -- for his integrity and unquenchable sense of hope.",
      "popularity": 6.741296,
      "poster_path": "/9O7gLzmreU0nGkIB6K3BsJbzvNv.jpg",
      "release_date": "1994-09-10",
      "title": "The Shawshank Redemption",
      "video": false,
      "vote_average": 8.32,
      "vote_count": 5238,
    },
    "278": Object {
      "adult": false,
      "backdrop_path": "/xBKGJQsAIeweesB79KC89FpBrVr.jpg",
      "genre_ids": Array [
        "18",
        "80",
      ],
      "id": "278",
      "original_language": "en",
      "original_title": "The Shawshank Redemption",
      "overview": "Framed in the 1940s for the double murder of his wife and her lover, upstanding banker Andy Dufresne begins a new life at the Shawshank prison, where he puts his accounting skills to work for an amoral warden. During his long stretch in prison, Dufresne comes to be admired by the other inmates -- including an older prisoner named Red -- for his integrity and unquenchable sense of hope.",
      "popularity": 6.741296,
      "poster_path": "/9O7gLzmreU0nGkIB6K3BsJbzvNv.jpg",
      "release_date": "1994-09-10",
      "title": "The Shawshank Redemption",
      "video": false,
      "vote_average": 8.32,
      "vote_count": 5238,
    },
    "333": Object {
      "adult": false,
      "backdrop_path": "/xBKGJQsAIeweesB79KC89FpBrVr.jpg",
      "genre_ids": Array [
        "18",
        "80",
      ],
      "id": "333",
      "original_language": "en",
      "original_title": "The Shawshank Redemption",
      "overview": "Framed in the 1940s for the double murder of his wife and her lover, upstanding banker Andy Dufresne begins a new life at the Shawshank prison, where he puts his accounting skills to work for an amoral warden. During his long stretch in prison, Dufresne comes to be admired by the other inmates -- including an older prisoner named Red -- for his integrity and unquenchable sense of hope.",
      "popularity": 6.741296,
      "poster_path": "/9O7gLzmreU0nGkIB6K3BsJbzvNv.jpg",
      "release_date": "1994-09-10",
      "title": "The Shawshank Redemption",
      "video": false,
      "vote_average": 8.32,
      "vote_count": 5238,
    },
  },
  "ids": Array [
    "278",
    "222",
    "333",
  ],
  "selectedMovieId": null,
}
`;

exports[`MoviesReducer SEARCH_COMPLETE & LOAD_SUCCESS should add only new movies when movies already exist 2`] = `
Object {
  "entities": Object {
    "222": Object {
      "adult": false,
      "backdrop_path": "/xBKGJQsAIeweesB79KC89FpBrVr.jpg",
      "genre_ids": Array [
        "18",
        "80",
      ],
      "id": "222",
      "original_language": "en",
      "original_title": "The Shawshank Redemption",
      "overview": "Framed in the 1940s for the double murder of his wife and her lover, upstanding banker Andy Dufresne begins a new life at the Shawshank prison, where he puts his accounting skills to work for an amoral warden. During his long stretch in prison, Dufresne comes to be admired by the other inmates -- including an older prisoner named Red -- for his integrity and unquenchable sense of hope.",
      "popularity": 6.741296,
      "poster_path": "/9O7gLzmreU0nGkIB6K3BsJbzvNv.jpg",
      "release_date": "1994-09-10",
      "title": "The Shawshank Redemption",
      "video": false,
      "vote_average": 8.32,
      "vote_count": 5238,
    },
    "278": Object {
      "adult": false,
      "backdrop_path": "/xBKGJQsAIeweesB79KC89FpBrVr.jpg",
      "genre_ids": Array [
        "18",
        "80",
      ],
      "id": "278",
      "original_language": "en",
      "original_title": "The Shawshank Redemption",
      "overview": "Framed in the 1940s for the double murder of his wife and her lover, upstanding banker Andy Dufresne begins a new life at the Shawshank prison, where he puts his accounting skills to work for an amoral warden. During his long stretch in prison, Dufresne comes to be admired by the other inmates -- including an older prisoner named Red -- for his integrity and unquenchable sense of hope.",
      "popularity": 6.741296,
      "poster_path": "/9O7gLzmreU0nGkIB6K3BsJbzvNv.jpg",
      "release_date": "1994-09-10",
      "title": "The Shawshank Redemption",
      "video": false,
      "vote_average": 8.32,
      "vote_count": 5238,
    },
    "333": Object {
      "adult": false,
      "backdrop_path": "/xBKGJQsAIeweesB79KC89FpBrVr.jpg",
      "genre_ids": Array [
        "18",
        "80",
      ],
      "id": "333",
      "original_language": "en",
      "original_title": "The Shawshank Redemption",
      "overview": "Framed in the 1940s for the double murder of his wife and her lover, upstanding banker Andy Dufresne begins a new life at the Shawshank prison, where he puts his accounting skills to work for an amoral warden. During his long stretch in prison, Dufresne comes to be admired by the other inmates -- including an older prisoner named Red -- for his integrity and unquenchable sense of hope.",
      "popularity": 6.741296,
      "poster_path": "/9O7gLzmreU0nGkIB6K3BsJbzvNv.jpg",
      "release_date": "1994-09-10",
      "title": "The Shawshank Redemption",
      "video": false,
      "vote_average": 8.32,
      "vote_count": 5238,
    },
  },
  "ids": Array [
    "278",
    "222",
    "333",
  ],
  "selectedMovieId": null,
}
`;

exports[`MoviesReducer SELECT should set the selected movie id on the state 1`] = `
Object {
  "entities": Object {
    "222": Object {
      "adult": false,
      "backdrop_path": "/xBKGJQsAIeweesB79KC89FpBrVr.jpg",
      "genre_ids": Array [
        "18",
        "80",
      ],
      "id": "222",
      "original_language": "en",
      "original_title": "The Shawshank Redemption",
      "overview": "Framed in the 1940s for the double murder of his wife and her lover, upstanding banker Andy Dufresne begins a new life at the Shawshank prison, where he puts his accounting skills to work for an amoral warden. During his long stretch in prison, Dufresne comes to be admired by the other inmates -- including an older prisoner named Red -- for his integrity and unquenchable sense of hope.",
      "popularity": 6.741296,
      "poster_path": "/9O7gLzmreU0nGkIB6K3BsJbzvNv.jpg",
      "release_date": "1994-09-10",
      "title": "The Shawshank Redemption",
      "video": false,
      "vote_average": 8.32,
      "vote_count": 5238,
    },
    "278": Object {
      "adult": false,
      "backdrop_path": "/xBKGJQsAIeweesB79KC89FpBrVr.jpg",
      "genre_ids": Array [
        "18",
        "80",
      ],
      "id": "278",
      "original_language": "en",
      "original_title": "The Shawshank Redemption",
      "overview": "Framed in the 1940s for the double murder of his wife and her lover, upstanding banker Andy Dufresne begins a new life at the Shawshank prison, where he puts his accounting skills to work for an amoral warden. During his long stretch in prison, Dufresne comes to be admired by the other inmates -- including an older prisoner named Red -- for his integrity and unquenchable sense of hope.",
      "popularity": 6.741296,
      "poster_path": "/9O7gLzmreU0nGkIB6K3BsJbzvNv.jpg",
      "release_date": "1994-09-10",
      "title": "The Shawshank Redemption",
      "video": false,
      "vote_average": 8.32,
      "vote_count": 5238,
    },
  },
  "ids": Array [
    "278",
    "222",
  ],
  "selectedMovieId": "278",
}
`;

exports[`MoviesReducer Selectors getSelectedId should return the selected id 1`] = `"278"`;

exports[`MoviesReducer undefined action should return the default state 1`] = `
Object {
  "entities": Object {},
  "error": "",
  "ids": Array [],
  "loading": false,
  "movies": Array [],
  "selectedMovieId": null,
}
`;
